--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -21,6 +21,6 @@ jobs:
       - name: tag
         uses: dagger/dagger-for-github@v6
         with:
-          args: --source=. tag --git-token=env:GITHUB_TOKEN
+          args: --source=. tag --git-token=env:GIT_TOKEN
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GIT_TOKEN: ${{ secrets.DAGGERVERSE_GITHUB_TOKEN }}
