--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,13 +1,8 @@
-
 # https://docs.github.com/en/code-security/supply-chain-security/keeping-your-dependencies-updated-automatically/configuration-options-for-dependency-updates
 
 version: 2
 updates:
-  - package-ecosystem: "gomod"
-    directories:
-      - "**/*"
-    schedule:
-      interval: "daily"
+  # can't use "gomod" because we don't commit the dagger generated code...
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
