--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - id: dagger_version
+        uses: sagikazarmark/dagger-version-action
       - name: publish
         uses: dagger/dagger-for-github@v6
         with:
+          version: ${{ steps.dagger_version.outputs.version }}
           args: publish
