--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,9 +19,12 @@ jobs:
           fetch-depth: 0
           fetch-tags: true
           persist-credentials: false
+      - id: dagger_version
+        uses: sagikazarmark/dagger-version-action
       - name: release
         uses: dagger/dagger-for-github@v6
         with:
+          version: ${{ steps.dagger_version.outputs.version }}
           args: release --git-token=env:GIT_TOKEN
         env:
           GIT_TOKEN: ${{ secrets.DAGGERVERSE_GITHUB_TOKEN }}
