--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
           fetch-tags: true
           persist-credentials: false
       - id: dagger_version
-        uses: sagikazarmark/dagger-version-action
+        uses: sagikazarmark/dagger-version-action@v0.0.1
       - name: release
         uses: dagger/dagger-for-github@v6
         with:
